--- a/ninjas.css
+++ b/ninjas.css
@@ -11,3 +11,18 @@
     margin: 0px;
     padding: 0px;
 }
+#ninjas ul {
+
+}
+#ninjas li {
+    display: inline-block;
+    margin: 20px;
+}
+#ninjas li img {
+    border: 2px solid black;
+    height: 150px;
+    width: 150px;
+}
+button {
+    margin: 20px;
+}
